--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "mongodb": "^4.2.1",
     "mongoose": "^6.1.1",
     "nodemailer": "^6.7.2",
+    "stripe": "^8.193.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
